--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,64 +9,78 @@
 
     <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:liftOnScroll="true">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="?attr/actionBarSize"
-                app:title="@string/home_title"/>
+                android:orientation="vertical"
+                app:layout_scrollFlags="scroll">
 
-        <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/home_banner_height">
-
-            <com.google.android.material.progressindicator.CircularProgressIndicator
-                    android:id="@+id/bannerProgressBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:indeterminate="true"
-                    android:visibility="gone"/>
-
-            <LinearLayout
-                    android:id="@+id/bannerInfoLinearLayout"
+            <com.google.android.material.appbar.MaterialToolbar
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="5"
-                    android:visibility="gone">
+                    android:layout_height="wrap_content"
+                    android:minHeight="?attr/actionBarSize"
+                    app:title="@string/home_title"/>
 
-                <ImageView
-                        android:id="@+id/bannerImageView"
-                        android:layout_width="0dp"
+            <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/home_banner_height">
+
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                        android:id="@+id/bannerProgressBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:indeterminate="true"
+                        android:visibility="gone"/>
+
+                <LinearLayout
+                        android:id="@+id/bannerInfoLinearLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:contentDescription="@null"
-                        android:scaleType="centerCrop"
-                        tools:src="@drawable/keg"/>
+                        android:orientation="horizontal"
+                        android:weightSum="5"
+                        android:visibility="gone">
+
+                    <ImageView
+                            android:id="@+id/bannerImageView"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="2"
+                            android:contentDescription="@null"
+                            android:scaleType="centerCrop"
+                            tools:src="@drawable/keg"/>
+
+                    <TextView
+                            android:id="@+id/bannerTaglineTextView"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="3"
+                            android:gravity="center"
+                            style="@style/TextAppearance.AppCompat.Headline"
+                            tools:text="A Real Bitter Experience."/>
+                </LinearLayout>
 
                 <TextView
-                        android:id="@+id/bannerTaglineTextView"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:gravity="center"
-                        style="@style/TextAppearance.AppCompat.Headline"
-                        tools:text="A Real Bitter Experience."/>
-            </LinearLayout>
-
-            <TextView
-                    android:id="@+id/bannerErrorTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:textColor="?attr/colorError"
-                    android:visibility="gone"/>
-        </com.google.android.material.card.MaterialCardView>
-
+                        android:id="@+id/bannerErrorTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:layout_gravity="center"
+                        android:textColor="?attr/colorError"
+                        android:visibility="gone"/>
+            </com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/drinkListProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"/>
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -84,8 +98,6 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
                 tools:listitem="@layout/list_item"
                 tools:itemCount="10"/>
     </LinearLayout>
