--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,5 +4,6 @@
     <dimen name="item_list_text_height">36dp</dimen>
     <dimen name="item_list_image_height">144dp</dimen>
     <dimen name="shape_corner_radius">30dp</dimen>
-    <dimen name="details_sheet_image_height">360dp</dimen>
+    <dimen name="details_image_height">360dp</dimen>
+    <dimen name="details_fab_margin">16dp</dimen>
 </resources>
