--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,11 +23,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="?attr/actionBarSize"
-                    app:title="@string/home_title"/>
+                    app:title="@string/home_title"
+                    android:padding="@dimen/padding"
+                    app:titleTextAppearance="@style/TextAppearance.PunkApplication.Headline4"/>
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/home_banner_height">
+                    android:layout_height="@dimen/home_banner_height"
+                    app:cardBackgroundColor="@color/secondary"
+                    app:cardCornerRadius="@dimen/shape_corner_radius"
+                    app:cardElevation="0dp"
+                    android:layout_marginHorizontal="@dimen/margin">
 
                 <com.google.android.material.progressindicator.CircularProgressIndicator
                         android:id="@+id/bannerProgressBar"
@@ -43,6 +49,7 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:weightSum="5"
+                        android:animateLayoutChanges="true"
                         android:visibility="gone">
 
                     <ImageView
@@ -52,6 +59,7 @@
                             android:layout_weight="2"
                             android:contentDescription="@null"
                             android:scaleType="centerCrop"
+                            android:layout_marginStart="@dimen/margin"
                             tools:src="@drawable/keg"/>
 
                     <TextView
@@ -60,7 +68,9 @@
                             android:layout_height="match_parent"
                             android:layout_weight="3"
                             android:gravity="center"
-                            style="@style/TextAppearance.AppCompat.Headline"
+                            android:padding="@dimen/padding"
+                            android:textColor="@color/brand"
+                            style="@style/TextAppearance.PunkApplication.Headline5"
                             tools:text="A Real Bitter Experience."/>
                 </LinearLayout>
 
@@ -72,7 +82,7 @@
                         android:layout_gravity="center"
                         android:textColor="?attr/colorError"
                         android:visibility="gone"/>
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -93,7 +103,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/home_flavors"
-                style="@style/TextAppearance.AppCompat.Headline"/>
+                android:layout_margin="@dimen/margin"
+                style="@style/TextAppearance.PunkApplication.Headline6"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
