--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/shape_corner_radius">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -16,6 +17,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/favorite_added"
                 android:contentDescription="@string/favorite_added"
+                android:layout_margin="@dimen/item_list_margin"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
@@ -24,6 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/item_list_image_height"
                 android:contentDescription="@null"
+                android:layout_margin="@dimen/item_list_image_margin"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -36,6 +39,9 @@
                 app:layout_constraintTop_toBottomOf="@id/imageView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:gravity="center"
-                tools:text="Buzz\nBuzz"/>
+                android:layout_marginHorizontal="@dimen/item_list_margin"
+                android:padding="@dimen/item_list_text_padding"
+                style="@style/TextAppearance.PunkApplication.Body2"
+                tools:text="BUZZ\nBUZZ"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
