--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/bottom_menu"/>
+            app:menu="@menu/bottom_menu"
+            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
+            app:itemIconSize="34dp"
+            app:itemIconTint="@drawable/bottom_nav_item_color"
+            app:itemRippleColor="@null"
+            app:labelVisibilityMode="unlabeled"
+            android:background="@color/secondary"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
