--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:indeterminate="true"
+                        app:indicatorColor="@color/brand"
                         android:visibility="gone"/>
 
                 <LinearLayout
@@ -91,7 +92,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:indeterminate="true"/>
+            android:indeterminate="true"
+            app:indicatorColor="@color/brand"/>
 
     <LinearLayout
             android:layout_width="match_parent"
