--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -23,18 +23,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="?attr/actionBarSize"
-                    app:layout_scrollFlags="scroll"
-                    app:title="@string/favorites_title"/>
+                    app:title="@string/favorites_title"
+                    android:padding="@dimen/padding"
+                    app:titleTextAppearance="@style/TextAppearance.PunkApplication.Headline4"/>
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                     android:id="@+id/drinkAmountCardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone">
+                    android:animateLayoutChanges="true"
+                    app:cardBackgroundColor="@color/secondary"
+                    app:cardCornerRadius="@dimen/shape_corner_radius_small"
+                    app:cardElevation="0dp"
+                    android:layout_marginHorizontal="@dimen/margin"
+                    android:layout_marginBottom="@dimen/margin">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/padding_small">
 
                     <TextView
                             android:id="@+id/totalAmountTextView"
@@ -42,7 +49,9 @@
                             android:layout_height="wrap_content"
                             android:text="@string/favorites_total_amount"
                             android:textAlignment="center"
-                            style="@style/TextAppearance.AppCompat.Headline"
+                            style="@style/TextAppearance.PunkApplication.Headline5"
+                            android:fontFamily="@font/montserrat_extra_bold"
+                            android:textColor="@color/brand"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/counterLinearLayout"
                             app:layout_constraintTop_toTopOf="parent"
@@ -66,10 +75,11 @@
                                 android:gravity="center"
                                 android:autoSizeTextType="uniform"
                                 android:autoSizeMaxTextSize="@dimen/favorites_counter_max_text_size"
+                                style="@style/TextAppearance.PunkApplication.Headline3"
                                 tools:text="10"/>
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -89,6 +99,7 @@
             android:layout_height="wrap_content"
             android:text="@string/favorites_empty"
             android:visibility="gone"
+            style="@style/TextAppearance.PunkApplication.Favorites.Headline5"
             android:layout_gravity="center"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
