--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".representation.home.HomeFragment">
+        tools:context=".representation.home.HomeFragment"
+        android:background="?attr/colorSurface">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -25,7 +26,8 @@
                     android:minHeight="?attr/actionBarSize"
                     app:title="@string/home_title"
                     android:padding="@dimen/padding"
-                    app:titleTextAppearance="@style/TextAppearance.PunkApplication.Headline4"/>
+                    app:titleTextAppearance="@style/TextAppearance.PunkApplication.Headline4"
+                    app:titleTextColor="?attr/colorOnSurface"/>
 
             <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -70,8 +72,8 @@
                             android:layout_weight="3"
                             android:gravity="center"
                             android:padding="@dimen/padding"
-                            android:textColor="@color/brand"
                             style="@style/TextAppearance.PunkApplication.Headline5"
+                            android:textColor="@color/brand"
                             tools:text="A Real Bitter Experience."/>
                 </LinearLayout>
 
@@ -106,7 +108,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/home_flavors"
                 android:layout_margin="@dimen/margin"
-                style="@style/TextAppearance.PunkApplication.Headline6"/>
+                style="@style/TextAppearance.PunkApplication.Headline6"
+                android:textColor="?attr/colorOnSurface"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
