--- a/app/src/main/res/drawable/details_bottom_sheet_background.xml
+++ b/app/src/main/res/drawable/details_bottom_sheet_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/surface"/>
+    <solid android:color="@color/light_surface"/>
     <corners android:topLeftRadius="@dimen/shape_corner_radius"
              android:topRightRadius="@dimen/shape_corner_radius"/>
 </shape>
