--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,21 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 <!--    COLOR PALETTE-->
-    <color name="onSurface">#1F1F1F</color>
+    <color name="light_primary">#F1F1F1</color>
+    <color name="light_background">#F9F9F9</color>
+    <color name="light_onBackground">#2D2D2D</color>
+    <color name="light_surface">#F1F1F1</color>
+    <color name="light_onSurface">#1F1F1F</color>
+
+    <color name="dark_primary">#121212</color>
+    <color name="dark_background">#1F1F1F</color>
+    <color name="dark_onBackground">#F1F1F1</color>
+    <color name="dark_surface">#121212</color>
+    <color name="dark_onSurface">#F9F9F9</color>
+
     <color name="secondary">#2D2D2D</color>
     <color name="brand">#F1CF6C</color>
-    <color name="onBackground">#888888</color>
-    <color name="background">#F1F1F1</color>
-    <color name="surface">#F9F9F9</color>
+    <color name="emptyList">#888888</color>
     <color name="favorite">#E41818</color>
     <color name="error">#BF0707</color>
 </resources>
