--- a/app/src/main/res/layout/history_list_item.xml
+++ b/app/src/main/res/layout/history_list_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="@dimen/history_item_height"
-        android:backgroundTint="?attr/backgroundColor">
+        android:backgroundTint="?attr/backgroundColor"
+        app:cardCornerRadius="@dimen/shape_corner_radius_small">
 
     <TextView
             android:id="@+id/drinkNameTextView"
@@ -13,7 +14,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_gravity="center"
-            style="@style/TextAppearance.AppCompat.Headline"
+            style="@style/TextAppearance.PunkApplication.Headline6.HistoryItem"
             android:textColor="?attr/colorOnBackground"
             tools:text="PUNK IPA 1997 - 1999"/>
 </androidx.cardview.widget.CardView>
