--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/backgroundColor">
+        android:background="@drawable/details_bottom_sheet_background">
 
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -13,8 +13,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/details_bottom_sheet_background">
+                android:layout_height="wrap_content">
 
             <LinearLayout
                     android:id="@+id/sheetLinearLayout"
@@ -22,13 +21,16 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:background="@drawable/details_sheet_background"
+                    android:padding="@dimen/padding"
                     app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                         android:id="@+id/imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/details_image_height"
+                        android:contentDescription="@string/details_drink_image"
                         android:layout_gravity="center"
+                        android:layout_margin="@dimen/margin"
                         tools:src="@drawable/keg"/>
 
                 <TextView
@@ -36,15 +38,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
-                        style="@style/TextAppearance.AppCompat.Headline"
+                        style="@style/PunkApplication.Headline5.DetailsTagline"
                         tools:text="POST MODERN CLASSIC. SPIKY. TROPICAL. HOPPY."/>
+
+                <Space android:layout_width="match_parent" android:layout_height="16dp"/>
 
                 <TextView
                         android:id="@+id/nameTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
-                        style="@style/TextAppearance.AppCompat.Headline"
+                        style="@style/PunkApplication.Headline5.DetailsName"
                         tools:text="Punk IPA 2007 - 2010"/>
             </LinearLayout>
 
@@ -52,74 +56,80 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:padding="@dimen/padding"
                     app:layout_constraintTop_toBottomOf="@id/sheetLinearLayout">
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/details_description"
-                        style="@style/TextAppearance.AppCompat.Headline"/>
+                        style="@style/PunkApplication.Headline6.Details"/>
                 <TextView
                         android:id="@+id/descriptionTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        style="@style/PunkApplication.Body1.Details"
                         tools:text="Our flagship beer that kick started the craft beer revolution. This is James and Martin's original take on an American IPA, subverted with punchy New Zealand hops. Layered with new world hops to create an all-out riot of grapefruit, pineapple and lychee before a spiky, mouth-puckering bitter finish."/>
+
+                <Space android:layout_width="match_parent" android:layout_height="8dp"/>
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/details_first_brewed"
-                        style="@style/TextAppearance.AppCompat.Headline"/>
+                        style="@style/PunkApplication.Headline6.Details"/>
                 <TextView
                         android:id="@+id/firstBrewedTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        style="@style/PunkApplication.Body1.Details"
                         tools:text="04/2007"/>
+
+                <Space android:layout_width="match_parent" android:layout_height="8dp"/>
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/details_brewed_tips"
-                        style="@style/TextAppearance.AppCompat.Headline"/>
+                        style="@style/PunkApplication.Headline6.Details"/>
                 <TextView
                         android:id="@+id/brewedTipsTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        style="@style/PunkApplication.Body1.Details"
                         tools:text="While it may surprise you, this version of Punk IPA isn't dry hopped but still packs a punch! To make the best of the aroma hops make sure they are fully submerged and add them just before knock out for an intense hop hit."/>
+
+                <Space android:layout_width="match_parent" android:layout_height="8dp"/>
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/details_food_pairing"
-                        style="@style/TextAppearance.AppCompat.Headline"/>
+                        style="@style/PunkApplication.Headline6.Details"/>
                 <TextView
                         android:id="@+id/foodPairingTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        style="@style/PunkApplication.Body1.Details"
                         tools:text="Spicy carne asada with a pico de gallo sauce\nShredded chicken tacos with a mango chilli lime salsa\nCheesecake with a passion fruit swirl sauce"/>
+
+                <Space android:layout_width="match_parent" android:layout_height="16dp"/>
 
                 <TextView
                         android:id="@+id/contributedByTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
+                        style="@style/PunkApplication.Caption"
                         tools:text="@string/details_contributed_by"/>
             </LinearLayout>
-
-            <ImageView
-                    android:id="@+id/cancelImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/close"
-                    android:layout_margin="@dimen/shape_corner_radius"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                     android:id="@+id/progressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:indeterminate="true"
+                    app:indicatorColor="@color/brand"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
