--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorSurface">@color/light_surface</item>
         <item name="colorOnSurface">@color/light_onSurface</item>
         <item name="colorPrimary">@color/light_primary</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorOnSecondary">@color/brand</item>
         <item name="android:statusBarColor">@color/light_surface</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
