--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -26,7 +26,7 @@
                     android:minHeight="?attr/actionBarSize"
                     app:title="@string/favorites_title"
                     android:padding="@dimen/padding"
-                    app:titleTextAppearance="@style/TextAppearance.PunkApplication.Headline4"
+                    app:titleTextAppearance="@style/PunkApplication.Headline4"
                     app:titleTextColor="?attr/colorOnSurface"/>
 
             <androidx.cardview.widget.CardView
@@ -51,7 +51,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/favorites_total_amount"
                             android:textAlignment="center"
-                            style="@style/TextAppearance.PunkApplication.Headline5"
+                            style="@style/PunkApplication.Headline5"
                             android:fontFamily="@font/montserrat_extra_bold"
                             android:textColor="@color/brand"
                             app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
                                 android:gravity="center"
                                 android:autoSizeTextType="uniform"
                                 android:autoSizeMaxTextSize="@dimen/favorites_counter_max_text_size"
-                                style="@style/TextAppearance.PunkApplication.Headline3"
+                                style="@style/PunkApplication.Headline3"
                                 android:textColor="?attr/colorOnBackground"
                                 tools:text="10"/>
                     </LinearLayout>
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:text="@string/favorites_empty"
             android:visibility="gone"
-            style="@style/TextAppearance.PunkApplication.Headline5.Empty"
+            style="@style/PunkApplication.Headline5.Empty"
             android:layout_gravity="center"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
