--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -23,7 +23,7 @@
                 app:layout_scrollFlags="scroll"
                 app:title="@string/history_title"
                 android:padding="@dimen/padding"
-                app:titleTextAppearance="@style/TextAppearance.PunkApplication.Headline4"
+                app:titleTextAppearance="@style/PunkApplication.Headline4"
                 app:titleTextColor="?attr/colorOnSurface"/>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -49,6 +49,6 @@
             android:layout_height="wrap_content"
             android:text="@string/history_empty"
             android:visibility="gone"
-            style="@style/TextAppearance.PunkApplication.Headline5.Empty"
+            style="@style/PunkApplication.Headline5.Empty"
             android:layout_gravity="center"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
