--- a/app/src/main/res/layout/history_list_item.xml
+++ b/app/src/main/res/layout/history_list_item.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_gravity="center"
-            style="@style/TextAppearance.PunkApplication.Headline6.HistoryItem"
+            style="@style/PunkApplication.Headline6.HistoryItem"
             android:textColor="?attr/colorOnBackground"
             tools:text="PUNK IPA 1997 - 1999"/>
 </androidx.cardview.widget.CardView>
