--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,6 +10,8 @@
         <item name="colorOnBackground">@color/dark_onBackground</item>
         <item name="colorSurface">@color/dark_surface</item>
         <item name="colorOnSurface">@color/dark_onSurface</item>
+        <item name="colorSecondary">@color/brand</item>
+        <item name="colorOnSecondary">@color/secondary</item>
         <item name="android:statusBarColor">@color/dark_surface</item>
     </style>
 </resources>
